--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -13,31 +13,197 @@ header {
 }
 
 .contaierHeader {
-    width: 80%;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
     .upHeader {
-        width: 80%;
+        width: 85%;
         display: flex;
         justify-content: space-between;
-    }
-}
 
-.logo {
-    img {
-        width: 152px;
-        height: 87px;
-        margin-right: 30px;
-    }
-}
+        .logoNavbar {
+            display: flex;
+            align-items: center;
 
-nav {
-    ul {
-        font-size: .875rem;
-        color: var(--color-light-grey);
-        font-family: var(--font-main);
+            .logo {
+                cursor: pointer;
+
+                img {
+                    width: 152px;
+                    height: 87px;
+                    /* margin-right: 30px; */
+                }
+            }
+
+            nav {
+                ul {
+                    font-size: .875rem;
+                    color: gray;
+                    display: flex;
+                    line-height: 1.5;
+                    align-items: center;
+                    padding: 3rem 3rem 3rem 0;
+
+                    .aksiya {
+                        a {
+                            color: red;
+                            transition: 1s;
+
+                            &:hover {
+                                opacity: .6;
+                            }
+                        }
+                    }
+
+                    li {
+                        a {
+                            font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+                            ;
+                            margin-right: 20px;
+                            color: inherit;
+                            word-break: break-word;
+                            transition: 1s;
+
+                            &:hover {
+                                opacity: .6;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .contactHeader {
+            display: flex;
+            justify-content: end;
+            align-items: center;
+            padding: 2rem;
+            gap: 10px;
+
+            .callBack {
+                display: ;
+
+                a {
+                    font-size: 2rem;
+                    font-weight: 700;
+                    margin-right: 8px;
+                    color: inherit;
+                    word-break: break-word;
+                }
+
+            }
+
+            .callBack-info {
+                .callBack-info-message {
+                    font-size: .75rem;
+                    line-height: 14px;
+                    color: #53595c;
+                }
+            }
+
+            .callBack-info-time {
+                font-size: .75rem;
+                line-height: 14px;
+                font-weight: 700;
+                color: #232222;
+            }
+
+            .lang {
+                padding: 10px;
+                display: flex;
+                align-items: center;
+
+                .az {
+                    border-right: 2px solid grey;
+                    cursor: pointer;
+                }
+
+                a {
+                    color: #53595c;
+                    font-size: .875rem;
+                    line-height: 16px;
+                    text-transform: uppercase;
+                    padding: 2px;
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+
+    .downHeader {
+        width: 100%;
         display: flex;
-        line-height: 1.5;
+        justify-content: center;
+        padding-left: 32px;
+        padding-right: 32px;
+        background-color: #3c3f42;
+        align-items: center;
+        /* padding: 20px; */
+        color: #fff;
+        height: 64px;
+
+        .downContainer {
+            width: 85%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            .kataloq {
+                font-weight: 500;
+                font-size: 1rem;
+                line-height: 125%;
+                letter-spacing: .02em;
+                text-transform: uppercase;
+                font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+                cursor: pointer;
+                padding: 20px;
+                align-items: center;
+                display: flex;
+                background-color: #232222;
+                height: 100%;
+                width: 314px;
+
+                .grids {
+                    margin-right: 10px;
+                    font-size: 1.5rem;
+                }
+            }
+.searchContainer{
+    display: flex;
+    justify-content: start;
+    margin: 0;
+    padding: 0;
+
+    .searchDiv{
+        width: 590px;
+        height: 40px;
+        padding: 0 16px;
+        display: flex;
+        position: relative;
+        .inp{
+            width: 100%;
+            height: 100%;
+            color: #504949;
+            font-size: .875rem;
+            border-radius: 5px;
+        }
+        .search{
+            position: absolute;
+            color: #232222;
+            right: 20px;
+            padding: 10px;
+            text-align: center;
+            top: 50%;
+        }
+    }
+
+}
+            .enter {
+                display: flex;
+            }
+        }
     }
 }
