--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -6,7 +6,7 @@
 }
 
 .secOneContainer {
-    width: 80%; 
+    width: 80%;
     display: flex;
 }
 
@@ -31,25 +31,95 @@
         }
     }
 }
-.swiperSecOne {
+
+.swiper {
+    background-color: rgb(186, 183, 183);
+    height: 500px;
     width: 100%;
-    height: 100%;
-  }
-  
-  .swiper-slideSecOne  {
+    height: 100% !important;
+}
+
+.swiper-initialized {
+    height: 100% !important;
+}
+
+.mySwiper {
+    height: 100% !important;
+}
+
+.mySwiper.swiper-slide {
+    opacity: 1;
+
+}
+
+.swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
-  
+    opacity: 1 !important;
+
     /* Center slide text vertically */
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .swiper-slideSecOne  img {
+}
+
+.swiper-slide img {
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
+}
+
+/* Section Two */
+.sectionTwo {
+    width: 100%;
+
+}
+
+.secTwoContainer {
+    overflow: hidden;
+    background-color: #fafafa;
+    justify-content: center;
+    margin: 20px;
+    display: flex;
+
+    .partSecTwo {
+        display: flex;
+        padding: 10px;
+        align-items: center;
+        width: 317px;
+        height: 132px;
+
+        .textTwo {
+            .bb {
+                color: #232323;
+                font-size: 1rem;
+                line-height: 140%;
+                margin-bottom: 4px;
+                font-weight: 800;
+                letter-spacing: .02em;
+                text-transform: uppercase;
+                font-family: "Montserrat";
+            }
+
+            .korporativ {
+                font-size: .875rem;
+                line-height: 115%;
+                color: #53595c;
+                max-width: 212px;
+                font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+                ;
+            }
+        }
+
+        .imgTwoSec {
+            img {
+                max-width: 80px;
+                height: 80px;
+                object-fit: contain;
+
+            }
+        }
+    }
+}
