--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -131,7 +131,12 @@ header {
         }
     }
 }
-
+.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;}
 .downHeader {
     width: 100%;
     display: flex;
@@ -143,7 +148,7 @@ header {
     /* padding: 20px; */
     color: #fff;
     height: 64px;
-
+   transition: 2s;
     .downContainer {
         width: 85%;
         display: flex;
