--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -8,6 +8,7 @@
 .secOneContainer {
     width: 80%;
     display: flex;
+    overflow: hidden;
 }
 
 .nav {
@@ -34,9 +35,8 @@
 
 .swiper {
     background-color: rgb(186, 183, 183);
-    height: 500px;
     width: 100%;
-    height: 100% !important;
+   
 }
 
 .swiper-initialized {
@@ -44,7 +44,8 @@
 }
 
 .mySwiper {
-    height: 100% !important;
+    height: 80% !important;
+    padding: 0 !important;
 }
 
 .mySwiper.swiper-slide {
@@ -67,7 +68,7 @@
 .swiper-slide img {
     display: block;
     width: 100%;
-    height: 100%;
+    height: 80%;
     object-fit: cover;
 }
 
@@ -119,6 +120,101 @@
                 height: 80px;
                 object-fit: contain;
 
+            }
+        }
+    }
+}
+ 
+
+/* Section Three */
+.sectionthree {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .bashliqlar {
+        display: flex;
+        align-items: center;
+        width: 83%;
+        gap: 20px;
+        margin-top: 20px;
+    }
+
+    .containerthree {
+        width:80%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 900px;
+
+        .productboxes {
+            width: 83%;
+            display: flex;
+            gap: 20px;
+            flex-wrap: wrap;
+
+            .productbox {
+                width: 300px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+                text-align: center;
+
+
+                .prImage {
+                    height: 300px;
+                    overflow: hidden;
+
+                    img {
+                        object-fit: cover;
+                    }
+                }
+
+                .spans {
+                    width: 100%;
+                    display: flex;
+                    justify-content: space-between;
+                    margin: 10px;
+
+                    span {
+                        background-color: rgba(168, 179, 152, 0.725);
+                        color: #007bff;
+                        padding: 0 20px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.sectionfour {
+
+    .containerfour {
+        height: 400px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .brands {
+            width: 90%;
+            display: flex;
+            justify-content: space-between;
+
+            .brand {
+                width: 200px;
+                height: 200px;
+                border-radius: 50%;
+                background-color: #ebeff2;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                .butun {
+                    font-size: 20px;
+                    margin-right: 10px;
+                }
             }
         }
     }
