--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -234,6 +234,7 @@ header {
                 display: flex;
                 align-items: center;
                 gap: 5px;
+                color: #fff;
 
                 /* font-size: 19px; */
                 .person {
