--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -36,7 +36,7 @@
 .swiper {
     background-color: rgb(186, 183, 183);
     width: 100%;
-   
+
 }
 
 .swiper-initialized {
@@ -44,7 +44,7 @@
 }
 
 .mySwiper {
-    height: 80% !important;
+    height: 100% !important;
     padding: 0 !important;
 }
 
@@ -124,7 +124,7 @@
         }
     }
 }
- 
+
 
 /* Section Three */
 .sectionthree {
@@ -142,11 +142,12 @@
     }
 
     .containerthree {
-        width:80%;
+        width: 80%;
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 900px;
+        flex-direction: column;
+        /* height: 900px; */
 
         .productboxes {
             width: 83%;
@@ -161,31 +162,85 @@
                 align-items: center;
                 box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
                 text-align: center;
+                position: relative;
 
-
-                .prImage {
-                    height: 300px;
-                    overflow: hidden;
-
-                    img {
-                        object-fit: cover;
-                    }
-                }
-
-                .spans {
-                    width: 100%;
+                .priceDetail {
                     display: flex;
-                    justify-content: space-between;
-                    margin: 10px;
+                    gap: 20px;
+                    align-items: center;
 
-                    span {
-                        background-color: rgba(168, 179, 152, 0.725);
-                        color: #007bff;
-                        padding: 0 20px;
+                    a {
+                        
+                                          
+                        .detaill {
+                            color: #000;
+                            padding: 5px 10px;
+                            border: 1px solid blue;
+                            border-radius: 5px;
+                            
+                            &:hover {
+                                color: white;
+                                background-color: #007bff;
+
+                                a {
+                                    color: white;
+                                }
+                            }
+                        }
+
                     }
                 }
             }
+
+
+            .prImage {
+                height: 300px;
+                overflow: hidden;
+
+                .heartIcon {
+                    position: absolute;
+                    right: 5px;
+                    font-size: 20px;
+                    color: rgb(236, 82, 82);
+
+                }
+
+                img {
+                    object-fit: contain;
+                }
+            }
+
+            .spans {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                margin: 10px;
+
+                span {
+                    background-color: rgba(168, 179, 152, 0.725);
+                    color: #007bff;
+                    padding: 0 20px;
+                }
+    
         }
+    }
+}
+}
+
+.more {
+    margin-top: 30px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #000;
+    color: white;
+    font-size: 1rem;
+    border: 2px solid #000;
+    transition: .5s;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+    &:hover {
+        background-color: #e5664b;
     }
 }
 
